tests/integration/snapshots/integration__conformance__n_object_bracket_key.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
{[: "x"}

stderr ---
error: expected entry or closed delimiter `}`, found `[`
 --> stdin:1:2
  |
1 | {[: "x"}
  | -^
  | |
  | expected due to `{`
